Fix with Navbar showing behind

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -84,7 +84,7 @@ a {
 }
 
 .raise-1 {
-    z-index: -4;
+    z-index: 10;
 }
 
 .raise {
